--- a/slave/Dockerfile
+++ b/slave/Dockerfile
@@ -8,3 +8,5 @@ RUN yum -y install nginx
 RUN easy_install-3.6 pip
 RUN pip install beautifulsoup4
 COPY ./crawller.py ./home/crawller.py
+
+WORKDIR /home
