Update crawller to Flask

--- a/slave/Dockerfile
+++ b/slave/Dockerfile
@@ -1,8 +1,9 @@
 FROM python:alpine
-
+EXPOSE 3000
 RUN mkdir /mydata
 WORKDIR /mydata
 RUN pip install beautifulsoup4
+RUN pip install flask
 COPY ./crawller.py ./crawller.py
 
-#CMD python crawller.py
+CMD ["python", "./crawller.py"]
