--- a/slave/deployment_client.yaml
+++ b/slave/deployment_client.yaml
@@ -1,9 +1,34 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: service-mypython
+  name: mypython
 spec:
-  restartPolicy: Never
-  containers:
-  - name: mypython
-    image: rehoosa/mypython:latest
+  replicas: 3
+  selector:
+    matchLabels:
+      name: mypython
+  template:
+    metadata:
+      labels:
+        name: mypython
+    spec:
+      containers:
+      - name: mypython
+        image: rehoosa/mypython:latest
+        imagePullPolicy: Always
+        ports:
+          - containerPort: 5000
+            name: flask
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mypython-svc
+spec:
+  selector:
+      name: mypython
+  ports:
+    - name: service
+      port: 80
+      targetPort: 5000
+  type: LoadBalancer
